<resources>
    <string name="app_name">赚赚购物</string>
    <string name="shop_main_tab1">商城</string>
    <string name="shop_main_tab2">品类</string>
    <string name="shop_main_tab3">发现</string>
    <string name="shop_main_tab4">我的</string>

    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>

    <string name="input_phone_number_hint">请输入手机号</string>
    <string name="password_login_input_hint">请输入密码</string>
    <string name="vcode">验证码</string>
    <string name="invitation_code">邀请码</string>
    <string name="login">登录</string>
    <string name="login_qq">QQ</string>
    <string name="login_weixin">微信登录</string>
    <string name="lossPasswordhint">忘记密码？</string>
    <string name="tudouni_password_login_change">密码登录</string>
    <string name="telbandin">绑定手机号</string>
    <string name="verification">验证</string>
    <string name="pass_word">密  码</string>
    <string name="find_passsword_hint">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="removetelbandin">验证原手机号</string>
    <string name="telbandinnew">绑定新手机号</string>
    <string name="telLogin">手机验证码登录</string>
    <string name="telPwdLogin">密码登录</string>
    <string name="sezhi">设置</string>
    <string name="realname">实名认证</string>
    <string name="logout">退出登录</string>
    <string name="can_not_find_version_name">未知版本号</string>
    <string name="accountSecurity">账号与安全</string>
    <string name="password_login">登录密码</string>

    <string name="real_name_detail">根据相关法规，开启直播需要进行实名认证</string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_text">土豆泥将严格保密用户认证信息</string>

    <string name="password_not_same_error_hint">输入密码不一致</string>
    <string name="password_format_error_hint">登录密码仅支持数字和字母，区分大小写，不允许包含空格</string>
    <string name="sure">确定</string>
    <string name="upUserInfo">编辑资料</string>
    <string name="mall_coupon">券 ￥</string>
    <string name="tb_price">淘宝价 ￥</string>
    <string name="month_sale_count">月销</string>
    <string name="commission">预估佣金</string>
    <string name="pay_order">付款订单</string>
    <string name="deal_order">结算订单</string>
    <string name="expect_order">预估订单</string>
    <string name="expect_income">预估收益</string>
    <string name="rmb">￥</string>
    <string name="fix2">.00</string>

    <string name="share_weixin">com.tencent.mm</string>
    <string name="share_multi_image_to_weixin">com.tencent.mm.ui.tools.ShareImgUI</string>
    <string name="share_multi_image_to_weixin_circle">com.tencent.mm.ui.tools.ShareToTimeLineUI</string>

    <string name="share_QQ">com.tencent.mobileqq</string>
    <string name="share_multi_image_to_QQ">com.tencent.mobileqq.activity.JumpActivity</string>

</resources>
