<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="true">
    <!-- 内容界面 -->
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottomMenu">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:clipChildren="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_EEEEEE" />

        <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/gt_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_mall_icon"
                    android:gravity="center"
                    android:text="@string/shop_main_tab1"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/text_size_10" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipChildren="false">


                <TextView
                    android:id="@+id/gt_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_category_icon"
                    android:gravity="center"
                    android:text="@string/shop_main_tab2"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/text_size_10" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/gt_mall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_find_icon"
                    android:gravity="center"
                    android:text="@string/shop_main_tab3"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/text_size_10" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/gt_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="3dp"
                    android:drawableTop="@drawable/tab_mine_icon"
                    android:gravity="center"
                    android:text="@string/shop_main_tab4"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/text_size_10" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
