<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <Button
        android:id="@+id/btn_net_env"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="网络环境：生产\n(测试用，正式会删除)"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tudouni_login_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:textColor="@color/color_999999"
            android:textSize="12sp"
            android:gravity="center"
            android:text="其他登录方式" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--微信-->
                <ImageView
                    android:id="@+id/iv_WechatLogin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_share_new_wx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/color_999999"
                    android:layout_gravity="center_horizontal"
                    android:text="微信"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <!--QQ-->
                <ImageView
                    android:id="@+id/iv_QqLogin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_share_new_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/color_999999"
                    android:layout_gravity="center_horizontal"
                    android:text="QQ"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/xy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="登录即表示同意 "
                android:textColor="@color/color_999999"
                android:autoLink="all"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/activity_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="赚赚服务协议"
                android:textColor="@color/color_E81833"
                android:autoLink="all"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tudouni_login_buttom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/tdnlogo"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:orientation="vertical">

                <include
                    layout="@layout/tel_login"/>

                <include
                    layout="@layout/password_login_child_layout"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/login_button_selector"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/color_999999"
                android:textSize="15sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">

                <TextView
                    android:id="@+id/loss_password_tv"
                    style="@style/color_999999_13_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:paddingRight="13dp"
                    android:visibility="gone"
                    android:text="@string/lossPasswordhint" />

                <TextView
                    android:id="@+id/login_mode_change_view"
                    style="@style/color_E81833_13_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/tudouni_password_login_change" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>